# eventstore-tcp

./: .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  index.html  search-index.js  smoke_test.bash
decoder/: Cargo.toml  README.md
decoder/src/: main.rs
eventstore_tcp/: EventStoreClient.t.html  ExpectedVersion.t.html  LogPosition.t.html  ReadDirection.t.html  ReadEventError.t.html  ReadStreamCompleted.t.html  ReadStreamFailure.t.html  ReadStreamSuccess.t.html  StreamVersion.t.html  WriteEventsFailure.t.html  enum.ContentType.html  enum.EventNumber.html  enum.ExpectedVersion.html  enum.LogPosition.html  enum.Message.html  enum.NotHandledReason.html  enum.ReadAllError.html  enum.ReadDirection.html  enum.ReadEventError.html  enum.ReadEventFailure.html  enum.ReadStreamError.html  enum.ReadStreamFailure.html  enum.WriteEventsFailure.html  index.html  sidebar-items.js  struct.EventRecord.html  struct.EventStoreClient.html  struct.MasterInfo.html  struct.Package.html  struct.ReadAllCompleted.html  struct.ReadAllEvents.html  struct.ReadStreamCompleted.html  struct.ReadStreamSuccess.html  struct.ResolvedIndexedEvent.html  struct.StreamVersion.html  struct.UsernamePassword.html  struct.WriteEvents.html  struct.WriteEventsCompleted.html
eventstore_tcp/adapted/: AdaptedMessage.t.html  BadRequestMessage.t.html  NotAuthenticatedMessage.t.html  NotHandledInfo.t.html  ReadAllError.t.html  enum.AdaptedMessage.html  enum.ReadAllError.html  enum.ReadEventError.html  enum.ReadStreamError.html  enum.WriteEventsFailure.html  index.html  sidebar-items.js  struct.BadRequestMessage.html  struct.NotAuthenticatedMessage.html  struct.NotHandledInfo.html  struct.ReadAllCompleted.html  struct.ReadStreamCompleted.html  struct.WriteEventsCompleted.html
eventstore_tcp/auth/: UsernamePassword.t.html  struct.UsernamePassword.html
eventstore_tcp/builder/: DeleteStreamBuilder.t.html  EventNumber.t.html  NewEventBuilder.t.html  ReadAllEventsBuilder.t.html  ReadEventBuilder.t.html  ReadStreamEventsBuilder.t.html  SimpleBuilder.t.html  WriteEventsBuilder.t.html  enum.ContentType.html  enum.EventNumber.html  enum.ExpectedVersion.html  index.html  sidebar-items.js  struct.Builder.html  struct.DeleteStreamBuilder.html  struct.NewEventBuilder.html  (+6 more)
examples/testclient/: Cargo.toml  test_with_inmemory_es.bash
examples/testclient/src/: delete.rs  lib.rs  main.rs  ping.rs  read.rs  write.rs
src/: adapted.rs  auth.rs  builder.rs  client.rs  client_messages.rs  client_messages_ext.rs  codec.rs  content_type.rs  event_number.rs  expected_version.rs  failures.rs  lib.rs  log_position.rs  main.rs  messages.rs  messages_ext.rs  operation_result.rs  package.rs  raw.rs  read_all.rs  read_direction.rs  read_event.rs  read_stream.rs  stream_version.rs  write_events.rs
src/raw/: mod.rs  (+2 more)
testclient/: Cargo.toml  test_with_inmemory_es.bash
(+245 files in other folders)
