[package]
name = "eventstore-tcp"
description = "Tokio-based EventStore client API in Rust"
keywords = ["tokio", "eventstore", "tcp", "client"]
repository = "https://github.com/koivunej/eventstore-tcp"
version = "0.1.0"
authors = ["Joonas Koivunen <joonas.koivunen@gmail.com>"]
license = "MIT"


[dependencies]
bitflags = "0.7"
uuid = { version = "0.2", features = ["use_std", "v4"] }
byteorder = "1"
error-chain = "0.8"
quick-protobuf = "0.5"
futures = "0.1"
tokio-core = "0.1"
tokio-service = "0.1"
tokio-proto = { path = "tokio-proto" }

[dev-dependencies]
rustc-serialize = "*"
