[package]
name = "testclient"
version = "0.1.0"
authors = ["Joonas Koivunen <joonas.koivunen@gmail.com>"]
description = "EventStore command line client/utility"

[dependencies]
eventstore-tcp = { path = "../../" }
uuid = { version = "0.2", features = ["use_std", "v4"] }
futures = "0.1"
tokio-core = "0.1"
tokio-service = "0.1"
clap = "2.20"
json = "0.11"
